5 Application Configuration/iam-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iam-service
  labels:
    name: iam-service
