5 Application Configuration/iam-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-service
spec:
  selector:
    app: iam-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
