5 Application Configuration/iam-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-service-ingress
  namespace: iam-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - iam.eltayeb.online
    secretName: iam-eltayeb-online-tls
  rules:
  - host: iam.eltayeb.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam-service
            port:
              number: 80
