5 Application Configuration/iam-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iam-service-network-policy
spec:
  podSelector:
    matchLabels:
      app: iam-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          name: api-service
      podSelector:
        matchLabels:
          app: api-service
    - namespaceSelector:
        matchLabels:
          name: image-service
      podSelector:
        matchLabels:
          app: image-service
    - namespaceSelector:
        matchLabels:
          name: observability
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: mongodb
      podSelector:
        matchLabels:
          app: mongodb
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
